# BitmapCompress

./: local.properties
app/: CMakeLists.txt
app/src/main/java/com/handsome/bitmapcompress/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
